--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 <body>
 	<ul class="sistema">
 
-		<li class="orbita"><i class="astro planeta plutao">Plutão</i></li>
+		<li class="orbita"><i class="astro planeta plutao">Pluto</i></li>
 
-		<li class="orbita"><i class="astro planeta netuno">Netuno</i></li>
+		<li class="orbita"><i class="astro planeta netuno">Neptune</i></li>
 
-		<li class="orbita"><i class="astro planeta urano">Urano</i></li>
+		<li class="orbita"><i class="astro planeta urano">Uranus</i></li>
 
-		<li class="orbita"><i class="astro planeta saturno">Saturno</i></li>
+		<li class="orbita"><i class="astro planeta saturno">Saturn</i></li>
 
-		<li class="orbita"><i class="astro planeta jupiter">Júpiter</i></li>
+		<li class="orbita"><i class="astro planeta jupiter">Jupiter</i></li>
 
-		<li class="orbita">Cinturão de Asteróides</li>
+		<li class="orbita">Asteroid Belt</li>
 
-		<li class="orbita"><i class="astro planeta marte">Marte</i></li>
+		<li class="orbita"><i class="astro planeta marte">Mars</i></li>
 
-		<li class="orbita"><i class="astro planeta terra">Terra</i></li>
+		<li class="orbita"><i class="astro planeta terra">earth</i></li>
 
-		<li class="orbita"><i class="astro planeta venus">Vênus</i></li>
+		<li class="orbita"><i class="astro planeta venus">Venus</i></li>
 
-		<li class="orbita"><i class="astro planeta mercurio">Mercúrio</i></li>
+		<li class="orbita"><i class="astro planeta mercurio">mercury</i></li>
 
 		<li class="orbita"><i class="astro sol">Sol</i></li>
 
